# SafeRoute

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml  roadmap.md  roadmap_production.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: main.py  routes.py  schemas.py
bindings/python/: pyproject.toml
bindings/python/saferoute/: __init__.py  data_loader.py  engine.py  familiarity.py  graph_cache.py  graph_validator.py
core/: Cargo.toml
core/src/algorithms/: astar_apex.rs
core/src/graph/: loader.rs  mod.rs
core/src/scoring/: mod.rs
core/tests/: integration.rs
docs/: architecture.md  changelog.md  contributing.md  index.md  installation.md  quickstart.md
docs/api/: engine.md  exceptions.md  familiarity.md  graph_cache.md  kde_scorer.md  models.md
notebooks/: saferoute_demo.ipynb
scripts/: bump_version.sh  download_cities.py  install_dev.bat  run_tests.bat
src/rust/: Cargo.toml  audit.toml
src/rust/src/: lib.rs
src/rust/src/algorithms/: mod.rs  pareto.rs
src/rust/src/graph/: loader.rs
src/rust/src/scoring/: risk.rs
src/rust/tests/: integration.rs
src/saferoute/: __init__.py  _cli.py  engine.py  exceptions.py  familiarity.py  graph_cache.py  kde_scorer.py  models.py
src/saferoute/api/: main.py  routes.py  schemas.py
tests/: conftest.py  test_api.py  test_engine.py  test_phase1.py  test_phase2.py  test_phase3_api.py
tests/python/: conftest.py  test_api.py  test_phase1.py  test_phase2.py  test_phase3_api.py  test_phase3_e2e.py
tests/rust/: test_astar.rs
