# Fait par Gillesto
# pyproject.toml — Configuration PyPI-ready avec maturin (src-layout)
#
# ┌─────────────────────────────────────────────────────────────────────────┐
# │  GUIDE RAPIDE                                                           │
# │                                                                         │
# │  Développeur (Rust requis) :                                            │
# │    pip install -e ".[dev,api]"   ← dépendances Python                  │
# │    python -m maturin develop --release  ← compile + installe le .so    │
# │                                                                         │
# │  Build wheel de distribution :                                          │
# │    python -m maturin build --release --out dist/                        │
# │                                                                         │
# │  Utilisateur final (Rust NON requis) :                                  │
# │    pip install saferoute                                                │
# │    pip install "saferoute[api]"   ← avec le serveur FastAPI             │
# │                                                                         │
# │  Lancer l'API :                                                         │
# │    uvicorn saferoute.api.main:app --reload                              │
# └─────────────────────────────────────────────────────────────────────────┘

# ── Build system ──────────────────────────────────────────────────────────────
# maturin est le seul build-backend nécessaire.
# Il orchestre à la fois la compilation Rust (via Cargo) et le packaging Python.

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

# ── Métadonnées du package PyPI ───────────────────────────────────────────────

[project]
name = "saferoute"
version = "0.1.0"
description = "Bibliothèque de routage piéton sûr multi-objectif (A*pex, KDE, Pareto) — Londres & Le Cap"
authors = [{ name = "Gillesto", email = "gillesto66@users.noreply.github.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"

keywords = [
    "routing",
    "geospatial",
    "safety",
    "pareto",
    "openstreetmap",
    "pathfinding",
    "multi-objective",
    "rust",
    "pyo3",
]

classifiers = [
    # Statut de développement
    "Development Status :: 3 - Alpha",
    # Audience
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    # Licence
    "License :: OSI Approved :: MIT License",
    # Langages
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Rust",
    # Domaine
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    # OS
    "Operating System :: OS Independent",
    # Typage
    "Typing :: Typed",
]

# ── Dépendances runtime ───────────────────────────────────────────────────────
# Ces dépendances sont installées automatiquement avec `pip install saferoute`.
# Elles ne contiennent PAS FastAPI/uvicorn (optionnel via extra [api]).

dependencies = [
    # Graphes routiers OSM
    "osmnx>=1.9",
    "networkx>=3.2",
    # Données géospatiales
    "geopandas>=0.14",
    "shapely>=2.0",
    # Scoring KDE
    "scipy>=1.12",
    "numpy>=1.26",
    # Requêtes HTTP (Police UK API, Cape Town Open Data)
    "httpx>=0.27",
    # Visualisation
    "matplotlib>=3.8",
    "folium>=0.16",
    # Cache utilisateur portable (remplace les chemins absolus)
    "platformdirs>=4.0",
]

# ── Dépendances optionnelles ──────────────────────────────────────────────────

[project.optional-dependencies]

# Extra [api] : serveur REST FastAPI
# Usage : pip install "saferoute[api]"
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
]

# Extra [dev] : outils de développement et de test
# Usage : pip install -e ".[dev,api]"
dev = [
    # Tests
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "hypothesis>=6.0",
    # Build Rust
    "maturin>=1.5,<2.0",
    # Linting / formatage
    "ruff>=0.4",
    "mypy>=1.10",
]

# Extra [docs] : génération de documentation
docs = [
    "mkdocs>=1.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-material>=9.5",
]

# ── URLs du projet ────────────────────────────────────────────────────────────

[project.urls]
Homepage      = "https://github.com/Gillesto66/SafeRoute"
Repository    = "https://github.com/Gillesto66/SafeRoute"
Documentation = "https://github.com/Gillesto66/SafeRoute#readme"
"Bug Tracker" = "https://github.com/Gillesto66/SafeRoute/issues"
Changelog     = "https://github.com/Gillesto66/SafeRoute/blob/main/CHANGELOG.md"

# ── Point d'entrée CLI (optionnel) ────────────────────────────────────────────
# Permet : saferoute-download --city london
[project.scripts]
saferoute-download = "saferoute._cli:main"

# ══════════════════════════════════════════════════════════════════════════════
# CONFIGURATION MATURIN
# Maturin lit cette section pour savoir comment compiler et packager le crate.
# ══════════════════════════════════════════════════════════════════════════════

[tool.maturin]

# Chemin vers le Cargo.toml du crate Rust (relatif à ce pyproject.toml)
manifest-path = "src/rust/Cargo.toml"

# src-layout : le code Python est dans src/
# maturin inclura automatiquement src/saferoute/ dans le wheel
python-source = "src"

# Nom complet du module natif Rust tel qu'importé en Python :
#   from saferoute.saferoute_core import PyGraph, compute_safe_routes
# Le préfixe "saferoute." place le .so dans le sous-package saferoute/
module-name = "saferoute.saferoute_core"

# Feature PyO3 requise pour générer un module d'extension Python
features = ["pyo3/extension-module"]

# Fichiers exclus du wheel final (données volumineuses, notebooks, scripts)
# Ces patterns sont relatifs à la racine du projet
exclude = [
    "data/**",
    "notebooks/**",
    "scripts/**",
    "tests/**",
    "**/__pycache__/**",
    "**/*.pyc",
    ".github/**",
    ".pytest_cache/**",
]

# Compatibilité manylinux pour les wheels Linux (requis pour PyPI)
# "auto" détecte automatiquement la version appropriée
compatibility = "manylinux2014"

# ══════════════════════════════════════════════════════════════════════════════
# CONFIGURATION PYTEST
# ══════════════════════════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
# Marqueurs personnalisés
markers = [
    "smoke: tests rapides sans accès réseau ni données réelles",
    "integration: tests nécessitant le module Rust compilé",
    "slow: tests lents (graphes réels, KDE sur grandes données)",
]

# ══════════════════════════════════════════════════════════════════════════════
# CONFIGURATION RUFF (linter / formateur)
# ══════════════════════════════════════════════════════════════════════════════

[tool.ruff]
src        = ["src"]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (géré par le formateur)
]

[tool.ruff.lint.isort]
known-first-party = ["saferoute"]

# ══════════════════════════════════════════════════════════════════════════════
# CONFIGURATION MYPY (vérification de types)
# ══════════════════════════════════════════════════════════════════════════════

[tool.mypy]
python_version    = "3.10"
strict            = false
warn_return_any   = true
warn_unused_ignores = true
ignore_missing_imports = true   # pour les modules sans stubs (osmnx, etc.)
