# Fait par Gillesto
# pyproject.toml — Configuration du package Python SafeRoute
#
# IMPORTANT : deux modes d'installation selon si Rust est disponible :
#
#   Mode 1 — Python pur (tests, développement sans Rust) :
#     pip install -e ".[dev]"          ← installe UNIQUEMENT les dépendances Python
#
#   Mode 2 — Avec le core Rust compilé :
#     pip install maturin
#     maturin develop --release        ← compile Rust + installe le binding
#
# Le build-backend maturin est déclaré mais pip install -e . sans maturin installé
# localement échoue. On utilise donc setuptools comme fallback pour le mode Python pur.

[build-system]
# setuptools permet pip install -e ".[dev]" sans Rust
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "saferoute"
version = "0.1.0"
description = "SafeRoute — Bibliothèque de routage sûr multi-objectif (Londres & Le Cap)"
authors = [{ name = "Gillesto" }]
requires-python = ">=3.10"
dependencies = [
    # Graphes routiers OSM
    "osmnx>=1.9",
    "networkx>=3.2",

    # Données géospatiales
    "geopandas>=0.14",
    "shapely>=2.0",

    # Scoring KDE
    "scipy>=1.12",
    "numpy>=1.26",

    # API REST
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",

    # Requêtes HTTP
    "httpx>=0.27",

    # Visualisation
    "matplotlib>=3.8",
    "folium>=0.16",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
]
rust = [
    # Dépendances pour compiler le core Rust
    "maturin>=1.5,<2.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["saferoute*"]

# ── Configuration maturin (utilisée UNIQUEMENT avec `maturin develop`) ────────
# Pour compiler le core Rust, remplacer le build-system ci-dessus par :
#   requires = ["maturin>=1.5,<2.0"]
#   build-backend = "maturin"
# puis lancer : maturin develop --release

[tool.maturin]
manifest-path = "../../core/Cargo.toml"
python-source = "."
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["../../tests/python"]
asyncio_mode = "auto"
